--- a/css/style.css
+++ b/css/style.css
@@ -1,294 +1,53 @@
 html,
 body,
-.view {
-    height: 100%;
+.view{height:100%;}
+body{position:relative;}
+.view{background:url("../img/bg1.jpg")no-repeat center center fixed;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover;}
+.hm-black-strong .full-bg-img{background-color:rgba(0,0,0,.75);}
+.flex-center{color:#fff;}
+.flex-center .socials a{margin-left:5px;margin-right:5px;}
+.navbar{background-color:transparent;}
+.navbar-dark .navbar-nav .nav-link{color:#fff;}
+.scrolling-navbar{-webkit-transition:background .5s ease-in-out, padding .5s ease-in-out;-moz-transition:background .5s ease-in-out, padding .5s ease-in-out;transition:background .5s ease-in-out, padding .5s ease-in-out;}
+.top-nav-collapse{background-color:#0b0b17;}
+.fixed-action-btn.horizontal{padding:0 0 0 15px;}
+.fixed-action-btn{position:fixed;right:40px;bottom:40px;margin-bottom:0;z-index:998;}
+.fixed-action-btn-project{position:fixed;right:16px;bottom:23px;margin-bottom:0;z-index:998;}
+.btn-floating.btn-large{width:56px;height:56px;}
+.btn-floating.btn-small{width:42px;height:42px;}
+.btn-floating{padding:0;border-radius:50%;box-shadow:0 5px 5px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12),0 3px 1px -2px rgba(0,0,0,0.2);}
+.waves-effect{position:relative;cursor:pointer;overflow:hidden;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;z-index:2;}
+.waves-effect, a{-webkit-tap-highlight-color:transparent;}
+.waves-effect{display:inline-block;vertical-align:middle;will-change:opacity, transform;transition:.3s ease-out;}
+.btn-floating.btn-large i{line-height:56px;}
+.btn-floating.btn-small i{line-height:42px;}
+.btn-floating i{width:inherit;display:inline-block;text-align:center;color:#fff;}
+.carousel-multi-item{margin-top:50px;margin-bottom:40px;}
+.carousel-multi-item .controls-top{text-align:center;margin-bottom:30px;}
+.carousel-multi-item .controls-top a{margin:8px;}
+.carousel-multi-item .carousel-indicators li{height:16px;width:16px;background-color:#45526e;margin-bottom:-90px;}
+.carousel-multi-item .carousel-indicators .active{height:20px;width:20px;background-color:#45526e;}
+.modal-body{padding:32px;}
+textarea.md-textarea.ng-touched.ng-valid-required{border-bottom:1px solid #4CAF50;}
+textarea.md-textarea.ng-touched.ng-invalid-required{border-bottom:1px solid #d9534f;}
+.red{color:#F44336!important;}
+.deep-blue{color:#45526e;background-color:#45526e;}
+.facebook{background-color:#3b5998;}
+.twitter{background-color:#1da1f2;}
+.linkedin{background-color:#0077b5;}
+.google-plus{background-color:#dd4b39;}
+.github{background-color:#4078c0;}
+@media only screen and (max-width:768px){.navbar{background-color:#0b0b17;}
+.btn-floating.btn-large{width:56px;height:56px;}
+.btn-floating.btn-small{width:40px;height:40px;}
+.btn-floating.btn-large i{line-height:56px;}
+.btn-floating.btn-small i{line-height:40px;}
+.fixed-action-btn{right:23px;bottom:23px;}
+.carousel-multi-item{margin-top:20px;margin-bottom:30px;}
+.carousel-multi-item .controls-top{margin-bottom:25px;}
+.carousel-multi-item .controls-top a{margin:5px;width:30px;height:30px;}
+.carousel-multi-item .controls-top a i{line-height:30px;}
+.carousel-multi-item .carousel-indicators li{height:12px;width:12px;margin-bottom:-70px;}
+.carousel-multi-item .carousel-indicators .active{height:15px;width:15px;}
+.modal-body{padding:16px;}
 }
-
-body{
-    position: relative;
-}
-
-.view {
-    background: url("../img/bg1.jpg")no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-
-.hm-black-strong .full-bg-img{
-    background-color: rgba(0,0,0,.75);
-}
-
-.flex-center {
-    color: #fff;
-}
-
-.flex-center .socials a{
-    margin-left: 5px;
-    margin-right: 5px;
-}
-
-
-
-.navbar {
-    background-color: transparent;
-}
-
-.navbar-dark .navbar-nav .nav-link {
-    color: #fff;
-}
-.scrolling-navbar {
-    -webkit-transition: background .5s ease-in-out, padding .5s ease-in-out;
-    -moz-transition: background .5s ease-in-out, padding .5s ease-in-out;
-    transition: background .5s ease-in-out, padding .5s ease-in-out;
-}
-
-.top-nav-collapse {
-    background-color: #0b0b17;
-}
-
-
-
-
-
-/*FLOATING ACTION BUTTON --Materialize.css*/
-
-.fixed-action-btn.horizontal {
-    padding: 0 0 0 15px;
-}
-
-.fixed-action-btn {
-    position: fixed;
-    right: 40px;
-    bottom: 40px;
-    margin-bottom: 0;
-    z-index: 998;
-}
-
-.fixed-action-btn-project {
-    position: fixed;
-    right: 16px;
-    bottom: 23px;
-    margin-bottom: 0;
-    z-index: 998;
-}
-
-.btn-floating.btn-large {
-    width: 56px;
-    height: 56px;
-}
-
-.btn-floating.btn-small {
-    width: 42px;
-    height: 42px;
-}
-
-.btn-floating {
-    padding: 0;
-    border-radius: 50%;
-    box-shadow: 0 5px 5px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12),0 3px 1px -2px rgba(0,0,0,0.2);
-}
-
-
-.waves-effect {
-    position: relative;
-    cursor: pointer;
-    overflow: hidden;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    z-index: 2;
-}
-
-.waves-effect, a {
-    -webkit-tap-highlight-color: transparent;
-}
-
-.waves-effect {
-    display: inline-block;
-    vertical-align: middle;
-    will-change: opacity, transform;
-    transition: .3s ease-out;
-}
-.btn-floating.btn-large i {
-    line-height: 56px;
-}
-.btn-floating.btn-small i {
-    line-height: 42px;
-}
-
-
-.btn-floating i {
-    width: inherit;
-    display: inline-block;
-    text-align: center;
-    color: #fff;
-}
-
-
-/*CAROUSEL*/
-.carousel-multi-item{
-    margin-top: 50px;
-    margin-bottom: 40px;
-}
-
-.carousel-multi-item .controls-top {
-    text-align: center;
-    margin-bottom: 30px;
-}
-
-.carousel-multi-item .controls-top a{
-    margin: 8px;
-}
-
-.carousel-multi-item .carousel-indicators li {
-    height: 16px;
-    width: 16px;
-    background-color: #45526e;
-    margin-bottom: -90px;
-}
-
-.carousel-multi-item .carousel-indicators .active {
-    height: 20px;
-    width: 20px;
-    background-color: #45526e;
-}
-
-
-
-
-
-/*MODAL*/
-.modal-body{
-    padding: 32px;
-}
-
-textarea.md-textarea.ng-touched.ng-valid-required{
-    border-bottom: 1px solid #4CAF50;
-}
-
-textarea.md-textarea.ng-touched.ng-invalid-required{
-    border-bottom: 1px solid #d9534f;
-}
-
-
-
-
-
-
-
-
-
-
-
-.red{
-    color: #F44336!important;
-}
-.deep-blue{
-    color: #45526e;
-    background-color: #45526e;
-}
-
-/*Brand Colors*/
-.facebook{
-    background-color: #3b5998;
-}
-.twitter{
-    background-color: #1da1f2;
-}
-.linkedin{
-    background-color: #0077b5;
-}
-.google-plus{
-    background-color: #dd4b39;
-}
-.github{
-    background-color: #4078c0;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*Media Queries*/
-@media only screen and (max-width: 768px) {
-    .navbar {
-        background-color: #0b0b17;
-    }
-
-    /*FAB*/
-    .btn-floating.btn-large {
-        width: 56px;
-        height: 56px;
-    }
-
-    .btn-floating.btn-small {
-        width: 40px;
-        height: 40px;
-    }
-
-    .btn-floating.btn-large i {
-        line-height: 56px;
-    }
-    .btn-floating.btn-small i {
-        line-height: 40px;
-    }
-
-    .fixed-action-btn {
-        right: 23px;
-        bottom: 23px;
-    }
-
-    /*CAROUSEL*/
-
-    .carousel-multi-item{
-        margin-top: 20px;
-        margin-bottom: 30px;
-    }
-
-    .carousel-multi-item .controls-top {
-        margin-bottom: 25px;
-    }
-
-    .carousel-multi-item .controls-top a {
-        margin: 5px;
-        width: 30px;
-        height: 30px;
-    }
-    .carousel-multi-item .controls-top a i{
-        line-height: 30px;
-    }
-
-    .carousel-multi-item .carousel-indicators li {
-        height: 12px;
-        width: 12px;
-        margin-bottom: -70px;
-    }
-
-    .carousel-multi-item .carousel-indicators .active {
-        height: 15px;
-        width: 15px;
-    }
-
-    /*MODAL*/
-    .modal-body{
-        padding: 16px;
-    }
-
-}
-
-
-
